2017-07-10 Fixed selecting text while dragging slider. Fixed dragged slider position.
2017-07-07 Added Wrap Items property to multiplegap module
2017-07-05 Fixed problem with tests which are using gwt classes
2017-06-29 Fixed problem with using apostrophe in gaps
2017-06-19 Fixed problem with custom events in Source list
2017-06-08 Fixed problem with dropdown gaps in Text module
2017-06-06 Fixed issue with scoring in Text module, added escaping pattern in gaps.
2017-06-05 Fixed problem with using eKeyboard in Text module. Added build files to gitignore.
2017-05-29 Fixed scoring and error counting in Text Presenter for dropdown gaps.
2017-05-26 Added new commands: setAsReportable nad setAsNonReportable for page.
2017-05-25 Fixed problem with checking answers in Hangman module
2017-05-22 Fixed Image Source module issue with show command and relocating module to 0,0 position
2017-05-22 Fixed problem with relative url returned by getPreview on localhost
2017-05-12 Added new display type icons+list in Table of Contents module
2017-05-11 Fixed propagating click in Image identification module
2017-05-09 Fixed resizing iframe in Paragraph eKeyboard module
2017-04-27 Changed url for image in eKeyboard module
2017-04-26 Fixed tests in Iframe, shape_tracing addons.
2017-04-24 Fixed loading images in Shape Tracing and Coloring
2017-04-24 Added sending event after closing popup page
2017-04-20 Added commands to get and set scroll value from iframe.
2017-04-19 Added playing, stop, end, pause events for slide show addon.
2017-04-12 Added dontMoveModules parameter to outstretchHeight command.
2017-04-07 Added allow fullscreen property to iFrame addon.
2017-04-04 Added changes in Variable Storage module
2017-04-04 Fixed adding hovering class in Reset module
2017-04-04 Added changes in page list.
2017-04-04 Fixed problem with reseting module after closing Popup in Paragraph module
2017-04-03 Fixed problem with not initialized eKeyboard while calling eKeyboard command.