@@ -21,7 +21,9 @@ class ResetButton extends PushButton{
 	private String confInfo = "";
 	private String confInfoYes = "";
 	private String confInfoNo = "";
-
+	private boolean confReset;
+	private IPlayerCommands pageService;
+	
 	public static native void removeHoveringFromButtons() /*-{
 	  var reset = $wnd.$('[id^="Reset"]');
 	  
@@ -36,6 +38,12 @@ class ResetButton extends PushButton{
 	public ResetButton(final IPlayerCommands pageService, final boolean confirmReset, final String confirmInfo, final String confirmYesInfo, final String confirmNoInfo){
 		
 		setStyleName("ic_button_reset");
+		
+		this.confReset = confirmReset;
+		this.confInfo = confirmInfo;
+		this.confInfoYes = confirmYesInfo;
+		this.confInfoNo = confirmNoInfo;
+		this.pageService = pageService;
 		
 		addMouseOverHandler(new MouseOverHandler() {
 			
@@ -55,68 +63,68 @@ class ResetButton extends PushButton{
 			public void onClick(ClickEvent event) {
 				event.stopPropagation();
 				event.preventDefault();
-
-				if(confirmReset){
-					confInfo = confirmInfo;
-					confInfoYes = confirmYesInfo;
-					confInfoNo = confirmNoInfo;
-					
-					if(confInfo == "") {
-						confInfo = "Are you sure that you want to reset the modules?";
-					}
-					
-					if(confInfoYes == "") {
-						confInfoYes = "Yes";
-					}
-					
-					if(confInfoNo == "") {
-						confInfoNo = "No";
-					}
-					
-					final DialogBox dialogBox = new DialogBox();
-					dialogBox.setStyleName("ic_confim_box");
-			        dialogBox.setHTML("<center>" + confInfo + "</center>");
-			        Button yesButton =  new Button(confInfoYes);
-			        Button noButton = new Button(confInfoNo);
-			        HorizontalPanel dialogHPanel = new HorizontalPanel();
-			        dialogHPanel.setStyleName("ic_confirm_box_buttons");
-			        yesButton.setStyleName("ic_confirm_box_yes");
-			        noButton.setStyleName("ic_confirm_box_no");
-			        
-			        dialogHPanel.setWidth("100%");
-			        dialogHPanel.setHorizontalAlignment(HasHorizontalAlignment.ALIGN_CENTER);
-			        dialogHPanel.add(yesButton);
-			        dialogHPanel.add(noButton);
-			        element = getElement();
-			        parent = element.getParentElement();
-			        int top = 200 + Window.getScrollTop();
-			        int left = (parent.getClientWidth() / 2) - 150;
-	
-			        noButton.addClickHandler(new ClickHandler() {
-			            @Override
-			            public void onClick(ClickEvent event) {
-			                dialogBox.hide();
-			                removeHoveringFromButtons();
-			              }
-			        });
-	
-			        yesButton.addClickHandler(new ClickHandler() {
-			            @Override
-			            public void onClick(ClickEvent event) {
-			            	pageService.reset();
-			                dialogBox.hide();
-			                removeHoveringFromButtons();
-			              }
-			        });
-	
-			        dialogBox.setWidget(dialogHPanel);
-			        dialogBox.setPopupPosition(left, top);
-			        dialogBox.show();
-				} else {
-					pageService.reset();
-				}				
+				execute();
 			}
 		});
 		
+	}
+	
+	public void execute(){
+		if(this.confReset){
+			
+			if(this.confInfo == "") {
+				this.confInfo = "Are you sure that you want to reset the modules?";
+			}
+			
+			if(this.confInfoYes == "") {
+				this.confInfoYes = "Yes";
+			}
+			
+			if(this.confInfoNo == "") {
+				this.confInfoNo = "No";
+			}
+			
+			final DialogBox dialogBox = new DialogBox();
+			dialogBox.setStyleName("ic_confim_box");
+	        dialogBox.setHTML("<center>" + confInfo + "</center>");
+	        Button yesButton =  new Button(confInfoYes);
+	        Button noButton = new Button(confInfoNo);
+	        HorizontalPanel dialogHPanel = new HorizontalPanel();
+	        dialogHPanel.setStyleName("ic_confirm_box_buttons");
+	        yesButton.setStyleName("ic_confirm_box_yes");
+	        noButton.setStyleName("ic_confirm_box_no");
+	        
+	        dialogHPanel.setWidth("100%");
+	        dialogHPanel.setHorizontalAlignment(HasHorizontalAlignment.ALIGN_CENTER);
+	        dialogHPanel.add(yesButton);
+	        dialogHPanel.add(noButton);
+	        this.element = getElement();
+	        parent = this.element.getParentElement();
+	        int top = 200 + Window.getScrollTop();
+	        int left = (parent.getClientWidth() / 2) - 150;
+
+	        noButton.addClickHandler(new ClickHandler() {
+	            @Override
+	            public void onClick(ClickEvent event) {
+	                dialogBox.hide();
+	                removeHoveringFromButtons();
+	              }
+	        });
+
+	        yesButton.addClickHandler(new ClickHandler() {
+	            @Override
+	            public void onClick(ClickEvent event) {
+	            	pageService.reset();
+	                dialogBox.hide();
+	                removeHoveringFromButtons();
+	              }
+	        });
+
+	        dialogBox.setWidget(dialogHPanel);
+	        dialogBox.setPopupPosition(left, top);
+	        dialogBox.show();
+		} else {
+			this.pageService.reset();
+		}				
 	}
 }
