@@ -1,3 +1,4 @@
+2017-07-11 Added command execute for reset button module.
 2017-07-10 Fixed selecting text while dragging slider. Fixed dragged slider position.
 2017-07-07 Added Wrap Items property to multiplegap module
 2017-07-05 Fixed problem with tests which are using gwt classes
